Style scroll, navigation buttons, fix overflow of the login/signup pages

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -60,3 +60,7 @@
 	font-weight: bold;
 	white-space: pre-line;
 }
+
+.navigation.vertical a, .navigation.vertical div {
+	width: 100%;
+}
