--- a/frontend/src/components/Login/scroll.css
+++ b/frontend/src/components/Login/scroll.css
@@ -1,21 +1,18 @@
-.gallery, .login--wrapper, .signup--wrapper {
-	scrollbar-color: #a68c14 #d2cdb2;
+.login--wrapper, .signup--wrapper {
+	scrollbar-color: #20283d #d2cdb2;
 	scrollbar-gutter: stable;
 }
 
-.gallery::-webkit-scrollbar,
 .login--wrapper::-webkit-scrollbar,
 .signup--wrapper::-webkit-scrollbar {
 	width: 10px;;
 }
 
-.gallery::-webkit-scrollbar-thumb,
 .login--wrapper::-webkit-scrollbar-thumb,
 .signup--wrapper::-webkit-scrollbar-thumb {
 	background: #d2cdb2;
 }
 
-.gallery::-webkit-scrollbar-track,
 .login--wrapper::-webkit-scrollbar-track,
 .signup--wrapper::-webkit-scrollbar-track {
 	background: #d2cdb2;
